# pixso

./: README.md  pyproject.toml
src/pixso/: __init__.py  app.py  cli.py  config.py  dedupe.py  exif.py  processor.py  sync.py  ui.py  utils.py
